新增 threshold for error ，取代evaluating(validating) 的 learning goal

--- a/templates/model_scenario_1.html
+++ b/templates/model_scenario_1.html
@@ -185,6 +185,13 @@
               <input type="text" id="Hyperparameters" name="regularizingStrength"  >
               <br><br>
 
+              <label class="col-md-8 fs-5">For evaluating</label>
+              <div class="form-floating mb-3">
+
+                <input type="text" class="form-control" id="floatingInput" placeholder="10" name="thresholdForError">
+                <label for="floatingInput">Threshold for error</label>
+              </div>
+
             </div>
           </div>
 
