--- a/templates/model_scenario_2.html
+++ b/templates/model_scenario_2.html
@@ -467,7 +467,7 @@
           <div class="col-md-12">
             <div class="h-100 p-5 bg-light border rounded-3">
 
-              <text><b>Hint message : <font color="blue">若要啟用 Cramming 或 Reorganizing，請確保 Rule 與 Data Sescribing 設置相同</font></b></text> 
+              <text><b>Hint message : <font color="blue">若要啟用 Cramming 或 Reorganizing，請確保 Rule 與 Data describing 設置相同</font></b></text> 
               <!-- 上面這行可以寫個後端判斷，是否達成條件，未達成則顯示上述訊息 -->
               <br><br>
               <text><b>Interrupted message : <font color="blue">{{interrupted_message}}</font></b></text>
