--- a/templates/model_scenario_SLFN.html
+++ b/templates/model_scenario_SLFN.html
@@ -125,7 +125,7 @@
     <div class="p-5 mb-1 bg-light rounded-5">
       <div class="container-fluid py-0">
         <h1 class="display-6 fw-bold">Model Pipeline</h1>
-        <p class="col-md-8 fs-5">Define your own ASLFN and train.</p> 
+        <p class="col-md-8 fs-5">Define your own SLFN and train.</p> 
         <br><br>
 
         
@@ -175,8 +175,13 @@
           <div class="col-md-12">
             <div class="h-100 p-5 bg-light border rounded-3">
 
-              <label class="col-md-8 fs-4">ASLFN(Two Layer).</label>
+              <label class="col-md-8 fs-4">SLFN(Two Layer).</label>
               <label class="col-md-8 fs-5">For training</label>
+              
+              <div class="form-floating mb-3">
+                <input type="text" class="form-control" id="floatingInput" placeholder="10" name="hiddenNode">
+                <label for="floatingInput">Hidden node</label>
+              </div>
 
               <div class="form-floating mb-3">
                 <select class="form-control" id="select_activationFunction" placeholder="10" name="activationFunction" method="GET"  style="font-size:20px;"> 
@@ -309,12 +314,6 @@
                 <div class="h-100 p-5 bg-light border rounded-3">
 
                   <label class="col-md-8 fs-4">Initializing.</label>
-
-                  <div class="form-floating mb-3">
-                    <input type="text" class="form-control" id="floatingInput" placeholder="10" name="hiddenNode">
-                    <label for="floatingInput">Hidden node</label>
-                  </div>
-
                   <div class="form-floating mb-3">
                     <select class="form-control" id="select_initializingRule" placeholder="10" name="initializingRule" method="GET"  style="font-size:20px;" onclick="showInitializingParameters()"> 
                       <option value= "LinearRegression" >LinearRegression</option>
