--- a/templates/model_scenario_2.html
+++ b/templates/model_scenario_2.html
@@ -291,19 +291,13 @@
           <div class="row">
             <div class="col-md-2 d-flex justify-content-center align-items-center">
 
-              <div class="btn-group-toggle" data-toggle="buttons">
-
-                  <div class="btn-group" role="group" aria-label="Basic example" >
-
-                    <button id = "initializing_mask_e" type="button" class="btn btn-outline-primary" onclick="showModules('initializing_mask_e')">Enable</button>
-                    <button id = "initializing_mask_d" type="button" class="btn btn-outline-primary" onclick="showModules('initializing_mask_d')">Disable</button>
-
-                  </div>
-
+              <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" id="initializing_switch" onchange="showModules()">
+                <label class="form-check-label" for="initializing_switch"></label>
               </div>
+
           </div>
 
-             
             <div class="col-md-10">
               <div id="initializing_mask" class="color" style="position:relative;width:auto;height:auto;z-index:999;color:grey; opacity:0.65; pointer-events:none;">
                 <div class="h-100 p-5 bg-light border rounded-3">
@@ -358,12 +352,10 @@
 
               <div class="btn-group-toggle" data-toggle="buttons">
 
-                  <div class="btn-group" role="group" aria-label="Basic example">
-
-                    <button id = "cramming_mask_e" type="button" class="btn btn-outline-primary" onclick="showModules('cramming_mask_e')" disabled>Enable</button>
-                    <button id = "cramming_mask_d" type="button" class="btn btn-outline-primary" onclick="showModules('cramming_mask_d')" disabled>Disable</button>
-
-                  </div>
+                <div class="form-check form-switch">
+                  <input class="form-check-input" type="checkbox" id="cramming_switch" onchange="showModules()">
+                  <label class="form-check-label" for="cramming_switch"></label>
+                </div>
 
               </div>
           </div>
@@ -401,12 +393,10 @@
 
               <div class="btn-group-toggle" data-toggle="buttons">
 
-                  <div class="btn-group" role="group" aria-label="Basic example" >
-
-                    <button id = "reorganizing_mask_e" type="button" class="btn btn-outline-primary" onclick="showModules('reorganizing_mask_e')" disabled>Enable</button>
-                    <button id = "reorganizing_mask_d" type="button" class="btn btn-outline-primary" onclick="showModules('reorganizing_mask_d')" disabled>Disable</button>
-
-                  </div>
+                <div class="form-check form-switch">
+                  <input class="form-check-input" type="checkbox" id="reorganizing_switch" onchange="showModules()">
+                  <label class="form-check-label" for="reorganizing_switch"></label>
+                </div>
 
               </div>
           </div>
