--- a/templates/model.html
+++ b/templates/model.html
@@ -104,6 +104,27 @@
     <div class="row align-items-md-stretch">
       <div class="col-md-6">
         <div class="h-100 p-5 text-white bg-dark rounded-3">
+          <h2>SLFN</h2>
+          <p>Define your own SLFN and train.</p>
+          <button class="btn btn-outline-light" type="button" onclick="window.location.href='/pipeline/model/scenario/SLFN';">Try it!</button>
+          
+          
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="h-100 p-5 bg-light border rounded-3">
+          <h2>ASLFN</h2>
+          <p>Define your own ASLFN and train.</p>
+          <button class="btn btn-outline-secondary" type="button" onclick="window.location.href='/pipeline/model/scenario/ASLFN';">Try it!</button>
+        </div>
+      </div>
+    </div>
+
+    <br>
+
+    <div class="row align-items-md-stretch">
+      <div class="col-md-6">
+        <div class="h-100 p-5 text-white bg-dark rounded-3">
           <h2>Scenario 1</h2>
           <p>Define your own model and train.</p>
           <button class="btn btn-outline-light" type="button" onclick="window.location.href='/pipeline/model/scenario/1';">Try it!</button>
@@ -111,13 +132,13 @@
           
         </div>
       </div>
-      <div class="col-md-6">
+      <!-- <div class="col-md-6">
         <div class="h-100 p-5 bg-light border rounded-3">
           <h2>Scenario 2</h2>
           <p>Define your own model and train.</p>
           <button class="btn btn-outline-secondary" type="button" onclick="window.location.href='/pipeline/model/scenario/2';">Try it!</button>
         </div>
-      </div>
+      </div> -->
     </div>
 
     <footer class="pt-3 mt-4 text-muted border-top">
