--- a/templates/model_scenario_SLFN.html
+++ b/templates/model_scenario_SLFN.html
@@ -96,18 +96,12 @@
         -webkit-overflow-scrolling: touch;
       }
       select {
-            width: 173px;
-            height: 43px;
+            width: 183px;
 
       }
     </style>
 
-  <script type="text/javascript"
-    src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-  </script>
-
-  <script type="text/javascript" src="{{ url_for('static', path='/js/script_model_2.js') }}"></script>
-
+    
   </head>
   <body>
     
@@ -122,20 +116,14 @@
       </a>
     </header>
 
-    <div class="p-5 mb-1 bg-light rounded-5">
+    <div class="p-5 mb-1 bg-light rounded-3">
       <div class="container-fluid py-0">
         <h1 class="display-6 fw-bold">Model Pipeline</h1>
         <p class="col-md-8 fs-5">Define your own SLFN and train.</p> 
         <br><br>
-
         
-        <form  method="post" enctype="multipart/form-data">
+        <form  method="post" enctype="multipart/form-data"> <!-- action="/pipeline/model"/ -->
 
-          <!-- <div >
-            <div id="data_mask"class="color" style="position:relative;width:auto;height:auto;z-index:999;color:grey; opacity:0.65; pointer-events:none;">
-            </div>
-          </div> -->
-          
           <div class="row">
             <div class="col-md-12">
                 <div class="h-100 p-5 bg-light border rounded-3">
@@ -168,20 +156,13 @@
                 </div>
             </div>
           </div>
-          
-
           <br>
 
-          <div class="col-md-12">
+                    <div class="col-md-12">
             <div class="h-100 p-5 bg-light border rounded-3">
 
               <label class="col-md-8 fs-4">SLFN(Two Layer).</label>
               <label class="col-md-8 fs-5">For training</label>
-              
-              <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="floatingInput" placeholder="10" name="hiddenNode">
-                <label for="floatingInput">Hidden node</label>
-              </div>
 
               <div class="form-floating mb-3">
                 <select class="form-control" id="select_activationFunction" placeholder="10" name="activationFunction" method="GET"  style="font-size:20px;"> 
@@ -205,7 +186,7 @@
           <div class="col-md-12">
             <div class="h-100 p-5 bg-light border rounded-3">
 
-              <label class="col-md-8 fs-4">Matching(Back Propagation).</label>
+              <label class="col-md-8 fs-4">Back Propagation.</label>
 
               <div class="form-floating mb-3">
                 <select class="form-control" id="select_loss" placeholder="10" name="lossFunction" method="GET"  style="font-size:20px;" onclick="showLossFunctionEquation()"> 
@@ -270,8 +251,8 @@
 
 
               <div class="form-floating mb-3" id = "p_matchingTimes" style="display:none;margin:0;">
-                <input type="text" class="form-control" id="floatingInput" placeholder="10" name="matchingTimes">
-                <label for="floatingInput">Matching times</label>
+                <input type="text" class="form-control" id="matchingTimes" placeholder="10" name="matchingTimes" onchange="commonTuningTimes(this.value)">
+                <label for="matchingTimes">Matching times</label>
               </div>
 
               <div class="form-floating mb-3" id = "p_matchingLearningGoal" style="display:none;margin:0;">
@@ -280,283 +261,51 @@
               </div>
 
               <div class="form-floating mb-3" id = "p_matchingLearningRateLowerBound" style="display:none;margin:0;">
-                <input type="text" class="form-control" id="floatingInput" placeholder="10" name="matchingLearningRateLowerBound">
-                <label for="floatingInput">Matching learning rate lower bound</label>
-              </div>
-
-
-              </div>
-
-            </div>
-          </div>
-
-
-          
-          <br>
-          <div class="row">
-            <div class="col-md-2 d-flex justify-content-center align-items-center">
-
-              <div class="btn-group-toggle" data-toggle="buttons">
-
-                  <div class="btn-group" role="group" aria-label="Basic example" >
-
-                    <button id = "initializing_mask_e" type="button" class="btn btn-outline-primary" onclick="showModules('initializing_mask_e')">Enable</button>
-                    <button id = "initializing_mask_d" type="button" class="btn btn-outline-primary" onclick="showModules('initializing_mask_d')">Disable</button>
-
-                  </div>
-
+                <input type="text" class="form-control" id="matchingLearningRateLowerBound" placeholder="10" name="matchingLearningRateLowerBound" onchange="commonLearningRateLowerBound(this.value)">
+                <label for="matchingLearningRateLowerBound">Matching learning rate lower bound</label>
               </div>
           </div>
 
-             
-            <div class="col-md-10">
-              <div id="initializing_mask" class="color" style="position:relative;width:auto;height:auto;z-index:999;color:grey; opacity:0.65; pointer-events:none;">
-                <div class="h-100 p-5 bg-light border rounded-3">
-
-                  <label class="col-md-8 fs-4">Initializing.</label>
-                  <div class="form-floating mb-3">
-                    <select class="form-control" id="select_initializingRule" placeholder="10" name="initializingRule" method="GET"  style="font-size:20px;" onclick="showInitializingParameters()"> 
-                      <option value= "LinearRegression" >LinearRegression</option>
-                      <option value= "Disabled" SELECTED>Disabled</option>
-                    </select>
-                    <label for="select_initializingRule">Initializing rule</label>
-                  </div>
-
-                    <div id = "regressionParameters" style="display:none;margin:0;">
-                      <div class="form-floating mb-3"  >
-                        <input type="text" class="form-control" id="floatingInput" placeholder="10" name="initializingNumber">
-                        <label for="floatingInput">Initializing number</label>
-                      </div>
-      
-                      <div class="form-floating mb-3"  >
-                        <input type="text" class="form-control" id="initializingLearningGoal" placeholder="10" name="initializingLearningGoal"  onchange="commonLearningGoal(this.value)">
-                        <label for="initializingLearningGoal">Initializing learning goal</label>
-                      </div>
-                    </div>
-
-                    <br><br>
-                    <label class="col-md-8 fs-4">Selecting.</label>
-                    <div class="form-floating mb-3">
-                      <select class="form-control" id="select_selectingRule" placeholder="10" name="selectingRule" method="GET"  style="font-size:20px;"> 
-                        <option value= "POS" >POS</option>
-                        <option value= "LTS" >LTS</option>
-                        <option value= "Disabled" SELECTED>Disabled</option>
-                      </select>
-                      <label for="select_selectingRule">Selecting rule</label>
-                    </div>
-
-                </div>
-              </div>
-            </div>
-          </div>
-        
           <br>
 
-          <div class="row">
-            <div class="col-md-2 d-flex justify-content-center align-items-center">
-
-              <div class="btn-group-toggle" data-toggle="buttons">
-
-                  <div class="btn-group" role="group" aria-label="Basic example">
-
-                    <button id = "cramming_mask_e" type="button" class="btn btn-outline-primary" onclick="showModules('cramming_mask_e')" disabled>Enable</button>
-                    <button id = "cramming_mask_d" type="button" class="btn btn-outline-primary" onclick="showModules('cramming_mask_d')" disabled>Disable</button>
-
-                  </div>
-
-              </div>
-          </div>
-
-             
-            <div class="col-md-10">
-              <div id="cramming_mask" class="color" style="position:relative;width:auto;height:auto;z-index:999;color:grey; opacity:0.65; pointer-events:none;">
-                <div class="h-100 p-5 bg-light border rounded-3">
-
-                  <label class="col-md-8 fs-4">Cramming.</label>
-                  <div class="form-floating mb-3">
-                    <select class="form-control" id="select_crammingRule" placeholder="10" name="crammingRule" method="GET"  style="font-size:20px;"> 
-                      <option value= "ri_sro" SELECTED>ri_sro</option>
-                      <option value= "ri_mro" >ri_mro</option>
-                      <option value= "bi_sro" >bi_sro</option>
-                      <option value= "bi_mro" >bi_mro</option>
-                      <option value= "ri_sbo" >ri_sbo</option>
-                      <option value= "ri_mbo" >ri_mbo</option>
-                      <option value= "bi_sbo" >bi_sbo</option>
-                      <option value= "bi_mbo" >bi_mbo</option>
-                      <option value= "Disabled" SELECTED>Disabled</option>
-                    </select>
-                    <label for="select_crammingRule">Selecting rule</label>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-
-          <br><br>
-          
-          <div class="row">
-            <div class="col-md-2 d-flex justify-content-center align-items-center">
-
-              <div class="btn-group-toggle" data-toggle="buttons">
-
-                  <div class="btn-group" role="group" aria-label="Basic example" >
-
-                    <button id = "reorganizing_mask_e" type="button" class="btn btn-outline-primary" onclick="showModules('reorganizing_mask_e')" disabled>Enable</button>
-                    <button id = "reorganizing_mask_d" type="button" class="btn btn-outline-primary" onclick="showModules('reorganizing_mask_d')" disabled>Disable</button>
-
-                  </div>
-
-              </div>
-          </div>
-
-             
-            <div class="col-md-10">
-              <div id="reorganizing_mask" class="color" style="position:relative;width:auto;height:auto;z-index:999;color:grey; opacity:0.65; pointer-events:none;">
-                <div class="h-100 p-5 bg-light border rounded-3">
-
-                  <label class="col-md-8 fs-4">Reorganizing.</label>
-                  <div class="form-floating mb-3">
-                    <select class="form-control" id="select_reorganizingRule" placeholder="10" name="reorganizingRule" method="GET"  style="font-size:20px;" onclick="showReorganzingingParameters()"> 
-                      <option value= "ri_sro" SELECTED>ri_sro</option>
-                      <option value= "ri_mro" >ri_mro</option>
-                      <option value= "bi_sro" >bi_sro</option>
-                      <option value= "bi_mro" >bi_mro</option>
-                      <option value= "ri_sbo" >ri_sbo</option>
-                      <option value= "ri_mbo" >ri_mbo</option>
-                      <option value= "bi_sbo" >bi_sbo</option>
-                      <option value= "bi_mbo" >bi_mbo</option>
-                      <option value= "Disabled" SELECTED>Disabled</option>
-                    </select>
-                    <label for="select_reorganizingRule">Reorganizing rule</label>
-                  </div>
-
-                  <div id = "reorganizingParamaters" style="display:none;margin:0;">
-                    <div class="form-floating mb-3"  >
-                      <input type="text" class="form-control" id="floatingInput" placeholder="10" name="regularizingTimes">
-                      <label for="floatingInput">Regularizing times</label>
-                    </div>
-
-                    <div class="form-floating mb-3"  >
-                      <input type="text" class="form-control" id="floatingInput" placeholder="10" name="regularizingStrength">
-                      <label for="floatingInput">Regularizing strength</label>
-                    </div>
-
-                    <div class="form-floating mb-3"  >
-                      <input type="text" class="form-control" id="regularizingLearningGoal" placeholder="10" name="regularizingLearningGoal">
-                      <label for="regularizingLearningGoal">Regularizing learning goal</label>
-                    </div>
-
-                    <div class="form-floating mb-3"  >
-                      <input type="text" class="form-control" id="floatingInput" placeholder="10" name="regularizingLearningRateLowerBound">
-                      <label for="floatingInput">Regularizing learning rate lower bound</label>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          
-          <br><br>
 
           <label class="col-md-8 fs-5"></label>
           <label for="define_model" class="btn btn-outline-primary btn-lg">Train</label>
-          <input class="form-control-sm" type="submit" id="define_model" class="btn btn-outline-primary btn-lg" formaction="/pipeline/model/scenario/2" hidden>
+          <input type="submit" id="define_model" class="btn btn-outline-primary btn-lg" formaction="/pipeline/model/scenario/SLFN" hidden>
+
           <br><br>
 
           <div class="col-md-12">
             <div class="h-100 p-5 bg-light border rounded-3">
 
-              <text><b>Hint message : <font color="blue">若要啟用 Cramming 或 Reorganizing，請確保 Rule 與 Data describing 設置相同</font></b></text> 
-              <!-- 上面這行可以寫個後端判斷，是否達成條件，未達成則顯示上述訊息 -->
-              <br><br>
               <text><b>Interrupted message : <font color="blue">{{interrupted_message}}</font></b></text>
-          
-            </div>
-          </div>
-
-          <br>
-
-          <div class="col-md-12">
-            <div class="h-100 p-5 bg-light border rounded-3">
+              
+              <br><br>
               <label class="col-md-8 fs-3">Training configuration</label>
               <br><br>
-
-              <label class="col-md-8 fs-5">Data.</label>
-              <br>
               <text><b>Data directory : <font color="blue">{{dataDirectory}}</font></b></text>
               <br>
-              <text><b>Data descirbing : <font color="blue">{{dataDescribing}}</font></b></text>
-              <br>
               <text><b>Data Shape : <font color="blue">{{dataShape}}</font></b></text>
-              <br><br>
-
-              <label class="col-md-8 fs-5">SLFN(Two Layer)</label>
               <br>
-              <text><b>Hidden node : <font color="blue">{{hiddenNode}}</font></b></text>
-              <br>
-              <text><b>Activation function : <font color="blue">{{activationFunction}}</font></b></text>
-
-              <br><br>
-              <label class="col-md-8 fs-5">Back Propagation.</label>
-              <br>
-              <text><b>Loss function : <font color="blue">{{lossFunction}}</font></b></text>
-              <br>
-              <text><b>Optimizer : <font color="blue">{{optimizer}}</font></b></text>
-              <br>
-              <text><b>Learning rate : <font color="blue">{{learningRate}}</font></b></text>
-              <br>
-              <text><b>Betas : <font color="blue">{{betas}}</font></b></text>
-              <br>
-              <text><b>Eps : <font color="blue">{{eps}}</font></b></text>
-              <br>
-              <text><b>Weight decay : <font color="blue">{{weightDecay}}</font></b></text>
-              <br>
-              <text><b>Epoch upper bound : <font color="blue">{{matchingTimes}}</font></b></text>
-
-              <br><br>
-              <label class="col-md-8 fs-5">Initializing.</label>
-              <br>
-              <text><b>Rule : <font color="blue">{{initializingRule}}</font></b></text>
+              <text><b>Model  : <font color="blue">{{modelFile}}</font></b></text>
               <br>
               <text><b>Initializing number : <font color="blue">{{initializingNumber}}</font></b></text>
               <br>
-              <text><b>Initializing learning goal : <font color="blue">{{initializingLearningGoal}}</font></b></text>
-        
-              <br><br>
-              <label class="col-md-8 fs-5">Selecting.</label>
+              <text><b>Loss Function : <font color="blue">{{lossFunction}}</font></b></text>
               <br>
-              <text><b>Rule : <font color="blue">{{selectingRule}}</font></b></text>
-
-              <br><br>
-              <label class="col-md-8 fs-5">Matching.</label>
+              <text><b>Learning goal : <font color="blue">{{learningGoal}}</font></b></text>
               <br>
-              <text><b>Rule : <font color="blue">{{matchingRule}}</font></b></text>
+              <text><b>Learning rate : <font color="blue">{{learningRate}}</font></b></text>
               <br>
-              <text><b>Matching learning goal : <font color="blue">{{matchingLearningGoal}}</font></b></text>
+              <text><b>Learning rate Lower bound : <font color="blue">{{learningRateLowerBound}}</font></b></text>
               <br>
-              <text><b>Matching learning rate lower bound : <font color="blue">{{matchingLearningRateLowerBound}}</font></b></text>
-
-              <br><br>
-              <label class="col-md-8 fs-5">Cramming.</label>
+              <text><b>Optimizer : <font color="blue">{{optimizer}}</font></b></text>
               <br>
-              <text><b>Rule : <font color="blue">{{crammingRule}}</font></b></text>
-
-              <br><br>
-              <label class="col-md-8 fs-5">Reorganizing.</label>
-              <br>
-              <text><b>Rule : <font color="blue">{{reorganizingRule}}</font></b></text>
-              <br>
-              <text><b>Regularizing times : <font color="blue">{{regularizingTimes}}</font></b></text>
+              <text><b>Tuning times : <font color="blue">{{matchingTimes}}</font></b></text>
               <br>
               <text><b>Regularizing strength : <font color="blue">{{regularizingStrength}}</font></b></text>
               <br>
-              <text><b>Regularizing learning goal : <font color="blue">{{regularizingLearningGoal}}</font></b></text>
-              <br>
-              <text><b>Regularizing learning rate lower bound : <font color="blue">{{regularizingLearningRateLowerBound}}</font></b></text>
-
-              <br><br>
-              <label class="col-md-8 fs-5">Model experiments record : <font color="blue">{{model_experiments_record}}</font></label>
+              <text><b>model_experiments_record : <font color="blue">{{model_experiments_record}}</font></b></text>
               <br><br>
 
             </div>
@@ -566,17 +315,12 @@
 
           <div class="col-md-12">
             <div class="h-100 p-5 bg-light border rounded-3">
-
               <label class="col-md-8 fs-3">Model Performance</label>
               <br><br>
               <text><b>Training accuracy : <font color="blue">{{trainingAccuracy}}</font></b></text>
               <br>
               <text><b>Validating accuracy : <font color="blue">{{validatingAccuracy}}</font></b></text>
               <br>
-
-
-
-
               <div class="p-5 mb-1 bg-light rounded-3">
       
                 <!-- <div class="gallery">
@@ -621,13 +365,13 @@
                 </div>
                 
               </div>
+
               <br><br><br><br><br>
             </div>
           </div>
         
-          <br><br>
-          <text>After training completed, this save mechanism will execute automatically.</text>
 
+          <text>After training completed, this save mechanism will execute automatically.</text>
         </form>
 
       </div>
@@ -637,10 +381,7 @@
       © 2022
     </footer>
   </div>
-
 </main>
 
 
-</body>
-
-</html>
+</body></html>
