移除 threshold for error 的概念 -> RMSE Error (testing)

--- a/templates/model_scenario_ASLFN.html
+++ b/templates/model_scenario_ASLFN.html
@@ -271,7 +271,7 @@
               </div>
 
               <div class="form-floating mb-3" id = "p_matchingLearningGoal" style="display:none;margin:0;">
-                <input type="text" class="form-control" id="matchingLearningGoal" placeholder="10" name="matchingLearningGoal">
+                <input type="text" class="form-control" id="matchingLearningGoal" placeholder="10" name="matchingLearningGoal" onchange="commonLearningGoal(this.value)">
                 <label for="matchingLearningGoal">Matching learning goal</label>
               </div>
 
@@ -326,7 +326,7 @@
       
                       <div class="form-floating mb-3"  >
                         <input type="text" class="form-control" id="learningGoal" placeholder="10" name="learningGoal"  onchange="commonLearningGoal(this.value)">
-                        <label for="learningGoal">Initializing learning goal</label>
+                        <label for="learningGoal">Learning goal</label>
                       </div>
                     </div>
 
