--- a/templates/service.html
+++ b/templates/service.html
@@ -202,7 +202,7 @@
               <br>
               <text><b>Validating accuracy : <font color="blue">{{validatingAccuracy}}</font></b></text>
               <br>
-              <text><b>Testing accuracy : <font color="blue">{{testingAccuracy}}</font></b></text>
+              <text><b>RMSE(Root Mean Squared Error) : <font color="blue">{{rmseError}}</font></b></text>
               <br>
               <div class="p-5 mb-1 bg-light rounded-3">
 
