完善 SLFN, ASLFN 的頁面，正在找能讓 Service 頁面透過 js 動態生成 html 的方法 -> 為了處理兩種情境下，不同的 Training configuration

--- a/templates/model_scenario_ASLFN.html
+++ b/templates/model_scenario_ASLFN.html
@@ -579,15 +579,15 @@
                 </div> -->
 
                 <div class="gallery">
-                  <a target="_blank" href="{{url_path_for_Accuracy}}">
-                    <img src= "{{url_path_for_Accuracy}}"  alt="Training Accuracy" width="600" height="400">
+                  <a target="_blank" href="{{url_path_for_trainingAccuracy}}">
+                    <img src= "{{url_path_for_trainingAccuracy}}"  alt="Training Accuracy" width="600" height="400">
                   </a>
                   <div class="desc">Training Accuracy</div>
                 </div>
                 
                 <div class="gallery">
-                  <a target="_blank" href="{{url_path_for_Loss}}">
-                    <img src= "{{url_path_for_Loss}}"  alt="Training Loss" width="600" height="400">
+                  <a target="_blank" href="{{url_path_for_trainingLoss}}">
+                    <img src= "{{url_path_for_trainingLoss}}"  alt="Training Loss" width="600" height="400">
                   </a>
                   <div class="desc">Training Loss</div>
                 </div>
