--- a/templates/model_scenario_SLFN.html
+++ b/templates/model_scenario_SLFN.html
@@ -321,38 +321,33 @@
                 </div> -->
 
                 <div class="gallery">
-                  <a target="_blank" href="{{url_path_for_Accuracy}}">
-                    <img src= "{{url_path_for_Accuracy}}"  alt="Training Accuracy" width="600" height="400">
+                  <a target="_blank" href="{{url_path_for_trainingAccuracy}}">
+                    <img src= "{{url_path_for_trainingAccuracy}}"  alt="Training Accuracy" width="600" height="400">
                   </a>
                   <div class="desc">Training Accuracy</div>
                 </div>
                 
                 <div class="gallery">
-                  <a target="_blank" href="{{url_path_for_Loss}}">
-                    <img src= "{{url_path_for_Loss}}"  alt="Training Loss" width="600" height="400">
+                  <a target="_blank" href="{{url_path_for_trainingLoss}}">
+                    <img src= "{{url_path_for_trainingLoss}}"  alt="Training Loss" width="600" height="400">
                   </a>
                   <div class="desc">Training Loss</div>
                 </div>
+
                 <div class="gallery">
-                  <a target="_blank" href="{{url_path_for_Nodes}}">
-                    <img src="{{url_path_for_Nodes}}"  alt="Model Nodes" width="600" height="400">
+                  <a target="_blank" href="{{url_path_for_validatingAccuracy}}">
+                    <img src= "{{url_path_for_validatingAccuracy}}"  alt="Training Accuracy" width="600" height="400">
                   </a>
-                  <div class="desc">Model Nodes</div>
+                  <div class="desc">Validating Accuracy</div>
                 </div>
                 
                 <div class="gallery">
-                  <a target="_blank" href="{{url_path_for_Pruned_nodes}}">
-                    <img src="{{url_path_for_Pruned_nodes}}"  alt="Pruned Nodes" width="600" height="400">
+                  <a target="_blank" href="{{url_path_for_validatingLoss}}">
+                    <img src= "{{url_path_for_validatingLoss}}"  alt="Training Loss" width="600" height="400">
                   </a>
-                  <div class="desc">Pruned Nodes</div>
+                  <div class="desc">Validating Loss</div>
                 </div>
 
-                <div class="gallery">
-                  <a target="_blank" href="{{url_path_for_Routes}}">
-                    <img src="{{url_path_for_Routes}}"  alt="Model Routes" width="600" height="400">
-                  </a>
-                  <div class="desc">Model Routes</div>
-                </div>
                 
               </div>
 
