試做 Deploy 頁面，但有多項困難: 1. switch 是否能 submit? 2. 用 jinja2 生成模板後，switch id 如何定義 & 在 js 抓取 3. 要存到資料庫(MongoDB?)，才能做到這個頁面的功能

--- a/templates/service.html
+++ b/templates/service.html
@@ -131,7 +131,7 @@
             <div class="h-100 p-5 bg-light border rounded-3">
               <label class="col-md-8 fs-4">Deploy Model from Registry.</label>
 
-              <select name="modelFile" method="GET"  style="font-size:20px;">
+              <select name="modelPklFile" method="GET"  style="font-size:20px;">
                 {% for model in model_registry %}
                 <option value= "{{model}}"  SELECTED>{{model}}</option>"
                 {% endfor %}
@@ -175,7 +175,7 @@
               <br>
               <text><b>Data shape : <font color="blue">{{dataShape}}</font></b></text>
               <br>
-              <text><b>Model file: <font color="blue">{{modelFile}}</font></b></text>
+              <text><b>Model file(pkl): <font color="blue">{{modelPklFile}}</font></b></text>
               <br>
               <text><b>Hidden node  : <font color="blue">{{hiddenNode}}</font></b></text>
               <br>
