--- a/templates/service.html
+++ b/templates/service.html
@@ -179,6 +179,8 @@
               <br>
               <text><b>Hidden node  : <font color="blue">{{hiddenNode}}</font></b></text>
               <br>
+              <text><b>Weight initialization : <font color="blue">{{weightInitialization}}</font></b></text>
+              <br>
               <text><b>Activation function  : <font color="blue">{{activationFunction}}</font></b></text>
               <br>
               <text><b>Epoch  : <font color="blue">{{epoch}}</font></b></text>
