--- a/templates/data.html
+++ b/templates/data.html
@@ -77,6 +77,7 @@
       }
     </style>
 
+  <script type="text/javascript" src="{{ url_for('static', path='/js/script_data.js') }}"></script>
     
   </head>
   <body>
@@ -95,8 +96,8 @@
 
     <div class="p-5 mb-1 bg-light rounded-3">
       <div class="container-fluid py-0">
-        <h1 class="display-6 fw-bold">Data Pipeline</h1>
-        <p class="col-md-8 fs-5">Define your own data.</p>
+        <h1 class="display-6 fw-bold">Data Upload</h1>
+        <p class="col-md-8 fs-5">Upload data.</p>
         <br><br>
          <form action="/pipeline/data" method="post" enctype="multipart/form-data">
 
@@ -126,13 +127,56 @@
             </div>
           </div>
 
-          <br><br>
-          <div class="col-md-12">
+          <br>
+
+          <div class="row">
+            <div class="col-md-12">
+                <div class="h-100 p-5 bg-light border rounded-3">
+                  
+                  <label class="col-md-8 fs-4">Select the use of data.</label>
+
+                  <div class="form-floating mb-3">
+                    <select class="form-control" id="select_dataUse" placeholder="10" name="dataUse" method="GET"  style="font-size:20px;" onchange="createOrSelect()"> 
+                      <option value= "Train" SELECTED>Train</option>
+                      <option value= "Test" >Test</option>
+                    </select>
+                    <label for="select_dataUse">Data directory</label>
+                  </div>
+
+                </div>
+            </div>
+          </div>
+
+          <br>
+
+          <div class="row" id="selectDirectory" style="display:none">
+            <div class="col-md-12">
+                <div class="h-100 p-5 bg-light border rounded-3">
+                  
+                  <label class="col-md-8 fs-4">Select existed Data directory.</label>
+
+                  <div class="form-floating mb-3">
+                    <select class="form-control" id="select_existedDirectory" placeholder="10" name="existedDirectory" method="GET"  style="font-size:20px;"> 
+                      {% for dataDir in upload_data %}
+                      <option value= "{{dataDir}}" SELECTED>{{dataDir}}</option>"
+                      {% endfor %}
+                    </select>
+                    <label for="select_existedDirectory">Data directory</label>
+                  </div>
+
+                </div>
+            </div>
+          </div>
+
+
+
+          <div class="col-md-12" id="createDirectory" style="display:block">
             <div class="h-100 p-5 bg-light border rounded-3">
-              <label class="col-md-8 fs-4">Create a directory saves file uploaded.</label>
-              <input type="text" id="directory_name" name="directoryName"  >
-              <br>
-              <text>While selecting data for training, just select directory.</text>
+              <label class="col-md-8 fs-4">Create a directory to save files uploaded.</label>
+              <div class="form-floating mb-3">
+                <input type="text" class="form-control" id="floatingInput" placeholder="10" name="newDirectory">
+                <label for="floatingInput">New directory</label>
+              </div>
             </div>
           </div>
               <br>
@@ -159,7 +203,7 @@
               <label for="save_data" class="btn btn-outline-primary btn-lg">Upload</label>
               <input type="submit" id="save_data" class="btn btn-outline-primary btn-lg" hidden>
               <br>
-              <text>Save file  to Server in <font color="blue"><b>{{directoryName}}</b></font> directory.</text>
+              <text>Save file  to Server in <font color="blue"><b>{{directory}}</b></font> directory.</text>
             </div>
           </div>
        </form>
